<resources>
    <string name="app_name">Games releases</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_top_games">Top games</string>
    <string name="menu_your_games">Your games</string>
    <string name="menu_releases">Releases in this month</string>
    <string name="genres_text">Ganres</string>
    <string name="release_date_text">Release date</string>
    <string name="metacritic_text">Metacritic</string>
    <string name="action">Action</string>
    <string name="rpg">RPG</string>
    <string name="shooter">Shooter</string>
    <string name="strategy">Strategy</string>
</resources>
