<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_releases">

    <fragment
        android:id="@+id/nav_releases"
        android:name="com.vb.gamesreleases.ui.fragments.UpcomingReleasesFragment"
        android:label="@string/menu_releases"
        tools:layout="@layout/fragment_upcoming_releases" />

    <fragment
        android:id="@+id/nav_top"
        android:name="com.vb.gamesreleases.ui.fragments.TopGamesByGenreFragment"
        android:label="@string/menu_top_games"
        tools:layout="@layout/fragment_top_games" />

    <fragment
        android:id="@+id/nav_your_games"
        android:name="com.vb.gamesreleases.ui.fragments.YourGamesFragment"
        android:label="@string/menu_your_games"
        tools:layout="@layout/fragment_your_games" />

</navigation>